--- a/default.css
+++ b/default.css
@@ -7,20 +7,11 @@
 #container {
   margin: 10px;
 }
+#contents {
+}
 #notice {
   padding: 3px;
   background-color: silver;
-}
-#navi {
-}
-#navi ul {
-  display: flex;
-  margin: 0;
-  padding: 0;
-}
-#navi li {
-  list-style: none;
-  margin-right: 10px;
 }
 
 .article {
@@ -39,4 +30,13 @@
 .message {
 }
 .links {
+}
+.links ul {
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+.links li {
+  list-style: none;
+  margin-right: 10px;
 }
